# BattleSnake-cpp-client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: battlesnake_api.hpp  board.hpp  example_client.cpp  main.cpp  rest_router.cpp  rest_router.hpp  util.h  xhargh_client.cpp
src/api/: battlesnake.hpp  util.h
src/basic_snake/: basic_snake.cpp
src/boost_snake/: board.hpp  boost_snake.cpp
src/c_api/: CMakeLists.txt.old  cpp_to_c_snake.cpp  snake_c_api.h  snake_c_utils.cpp  snake_c_utils.h  snake_cpp_to_c.cpp  snake_cpp_to_c.h
src/c_snakes/: circle_snake.c  circle_snake.h  random_snake.c  random_snake.h  smart_snake.c  smart_snake.cpp  smart_snake.h  smarter_snake.c  smarter_snake.h  stupid_snake.c  stupid_snake.cpp  stupid_snake.h
src/main/: main.cpp  rest_router.cpp  rest_router.hpp
src/not_linux/: main.c  snake_c_sockets.cpp
